syntax = "proto3";

package helloworld;

import "helloworld/helloworld.proto";

service Helloworld {
	rpc ArticleAdd(Article) returns (Article) {}
    rpc ArticleDel(ArticleFilter) returns (Article) {}
    rpc ArticleUpdate(Article) returns (Article) {}
    rpc ArticleOne(ArticleFilter) returns (Article) {}
    rpc ArticlePage(ArticleFilter) returns (ArticleList) {}
}